--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,12 @@ dependencies = [
     "rich>=13.0.0",
     "cryptography>=42.0.0",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+]
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
+testpaths = ["tests"]
